[gd_scene load_steps=2 format=3 uid="uid://dtgu3jaxud8b6"]

[ext_resource type="Script" uid="uid://mrsqn05cyfdy" path="res://Scripts/pause_menu.gd" id="1_ltd3m"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ltd3m")

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="Control/Panel"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(1, 1, 1, 0.039215688)

[node name="Resume" type="Button" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -37.0
offset_right = 220.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "Resume
"

[node name="Save Run" type="Button" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = 56.0
offset_right = 222.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
text = "Save Run"

[node name="Quit" type="Button" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = 151.0
offset_right = 221.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit to menu"

[connection signal="pressed" from="Control/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/Save Run" to="." method="_on_save_run_pressed"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_quit_pressed"]
